--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,9 +11,11 @@ def safeExtGet(prop, fallback) {
 
 
 android {
+
     compileSdkVersion safeExtGet('compileSdkVersion', DEFAULT_COMPILE_SDK_VERSION)
 
     defaultConfig {
+        compileSdk 34
         minSdkVersion safeExtGet('minSdkVersion', DEFAULT_MIN_SDK_VERSION)
         targetSdkVersion safeExtGet('targetSdkVersion', DEFAULT_TARGET_SDK_VERSION)
         resValue "string", "places_api_key", (System.env.RNGP_ANDROID_API_KEY ? "$System.env.RNGP_ANDROID_API_KEY" : (rootProject.findProperty("RNGP_ANDROID_API_KEY") ?: "INSERT_KEY_HERE"))
@@ -45,7 +47,9 @@ dependencies {
     def supportLibVersion = safeExtGet('supportLibVersion', DEFAULT_SUPPORT_LIB_VERSION)
 
     implementation "com.facebook.react:react-native:+"
-    implementation "com.google.android.libraries.places:places:1.1.0"
+    implementation('com.google.android.libraries.places:places:1.1.0') {
+       exclude group: 'com.android.volley'
+       }
     implementation "com.android.support:appcompat-v7:${supportLibVersion}"
     implementation "com.android.support:support-v4:${supportLibVersion}"
     implementation "com.google.code.findbugs:jsr305:3.0.2"
